恢复配置类：ZApplicationEventConfigurationProperties，因为之前在jdk21用虚拟线程而删了，现在合并过来又重新加上了